pkg/deps/testdata/ub/manifest/invalid/string-require.ub
manifest: {
  requires: {
    'github.com/x/y': 'v1.2.3'
  }
}
